Working on it ...

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 </head>
 	<body>
 		<!--mouse makes image bigger/smaller -->
-		<div class="img">
+		<!--<div class="img">
 			<img id= "mainPic" onmouseover="enlarge(this)" onmouseout="minimize(this)" src ="station_of_awakening__neon_genesis__evangelion_by_4xeyes1987-d5jlrra.png" alt="Animu stuff">
 		</div>
-		<!--Introduction-->
+		<!--Introduction--
 		<div class="intro">
 			<div class="header">
 				<h1 id="coolbutton">Mr. Random</h1>
 				<button class="button" type="button" onClick="changeSize()">Change size!</button>
 			</div>
-			<!--Content-->
+			<!--Content--
 			<div class ="content">
 				<p>I am the randomest!</p>
 				<p>REMEMBER TO SOURCE THE SICK BEAT AND PIC!</p>
 				<a href="page.html">Just Random Stuff </a>
 			</div>
-			<!--Beat-->
+			<!--Beat--
 			<div class="beat">
 				<audio controls autoplay loop>
  					<source src="Game Over by BKNAPP beats_soundcloud.mp3" type="audio/mpeg">
@@ -38,6 +38,7 @@
 					</audio>
 				<p>Sick beat "Game Over" by BKNAPP beats</p>
 			</div>
-		</div>
+		</div>-->
+		<p> Working on it....</p>
 	</body>
 </html>
