Linking to earthchant

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class ="content">
 				<p>I am the randomest!</p>
 				<p>REMEMBER TO SOURCE THE SICK BEAT AND PIC!</p>
-				<a href="page.html">Just Random Stuff </a>
+				<a href="earthChant/index.html">Just Random Stuff </a>
 			</div>
 			<!--Beat--
 			<div class="beat">
