Commented stuff to simplify website for Demo Day

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="page.html">
 	<script src="p5.min.js"></script>
-	<script src="script.js"></script>
+	<!--<script src="script.js"></script>-->
 	<title>Adonis Pujols</title>
 </head>
 	<body>
@@ -39,6 +39,6 @@
 				<p>Sick beat "Game Over" by BKNAPP beats</p>-->
 			</div>
 		</div>
-		<p> Working on it....</p>
+		<p> Click on link above</p>
 	</body>
 </html>
